@@ -515,8 +515,8 @@ void HTMLTablePartElementImpl::parseAttribute(AttributeImpl *attr)
     case ATTR_ALIGN:
     {
         DOMString v = attr->value();
-        if ( strcasecmp( attr->value(), "center" ) == 0 )
-	  v = "-konq-center";
+        if ( strcasecmp( attr->value(), "middle" ) == 0 || strcasecmp( attr->value(), "center" ) == 0 )
+            v = "-konq-center";
         addCSSProperty(CSS_PROP_TEXT_ALIGN, v);
         break;
     }
